Updates for Exercises including new notebook

--- a/docker/ubuntu-proftools/Dockerfile
+++ b/docker/ubuntu-proftools/Dockerfile
@@ -7,14 +7,13 @@ USER root
 #COPY wheel /etc/sudoers.d/wheel
 #
 RUN apt update 
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata
 RUN apt install -y g++ clang make git strace python3
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata
 
 RUN apt install -y valgrind
 RUN apt install -y kcachegrind
-RUN apt install -y libjemalloc1 libjemalloc-dev massif-visualizer
 RUN apt install -y emacs vim nano gedit
-RUN apt install -y sudo strace
+RUN apt install -y sudo libjemalloc-dev massif-visualizer
 RUN git clone https://github.com/snafus/OptimisationWorkshop.git
 
 #RUN git clone --depth 1 https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git
@@ -23,3 +22,4 @@ RUN git clone https://github.com/snafus/OptimisationWorkshop.git
 # RUN apt install -y google-perftools
 # RUN apt install -y x11-apps
 # RUN apt install -y linux-tools-common linux-tools-generic
+# RUN apt install -y libjemalloc1 libjemalloc-dev massif-visualizer
